methods.args.MethodsArgs.scala.error
Erreur de compilation :
MethodsArgs:2: error: Missing closing brace `}' assumed here
def move(nbPas:Int,versLAvant:Boolean) {if (versLAvant) {for (i<-1 to nbPas) {avance()}} else {for (i<-1 to nbPas) {recule()}} 
^MethodsArgs:2: error: expected class or object definition
def move(nbPas:Int,versLAvant:Boolean) {if (versLAvant) {for (i<-1 to nbPas) {avance()}} else {for (i<-1 to nbPas) {recule()}} 
^